@@ -1,14 +1,16 @@
 package com.lucnghinh.laptop_store.security;
 
+import com.lucnghinh.laptop_store.entity.Role;
 import com.lucnghinh.laptop_store.entity.User;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
+@Getter
 public class CustomUserDetails implements UserDetails {
     private final User user;
 
@@ -22,7 +24,11 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(/*new SimpleGrantedAuthority("ROLE_"+user.getRole().name())*/);
+        Set<Role> roles = user.getRoles();
+        if(roles == null || roles.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return roles.stream().map(role -> new SimpleGrantedAuthority("ROLE_" + role.getName())).collect(Collectors.toList());
     }
 
     @Override
